--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ button:hover {
 .search-parameters {
     padding: 10px;
     margin: 20px 0 0 0;
-    color: white;
+    color: black;
     float: right;
 }
 
@@ -75,7 +75,7 @@ select {
 .search-parameters label, a {
     padding: 1px;
     margin: 1px;
-    color: white;
+    color: black;
 }
 
 #result {
